# heaters

./: .dockerignore  .formatter.exs  .gitignore  .tool-versions  AGENTS.md  CLAUDE.md  COMMIT_MESSAGE.md  CONTEXT_REFACTOR_PLAN.md  Dockerfile  Dockerfile.dev  FUNCTIONAL_DOMAIN_REFACTOR_PLAN.md  MEDIA_FRAGMENTS_IMPLEMENTATION_PLAN.md  PHOENIX_AUDIT_2025.md  REFACTORING_IMPLEMENTATION.md  REFACTOR_PLAN.md  REORGANIZATION_PLAN.md  TRANSFORM_REFACTOR_PLAN.md  current_prod_schema.sql  debug_port.exs  docker-compose.yaml  docker-compose.yml  elixir_idioms_audit.md  enhanced_virtual_clips_refactor.md  fix_proxy_files.sh  heaters_workflow_report.md  heaters_workflow_report_v3.md  mix.exs  production_deployment_guide.md  refactor_overview.md  render.yaml
assets/: package-lock.json  package.json  postcss.config.js
backend/: Dockerfile  Dockerfile.prefect-server  config.py  prefect.dev.yaml  prefect.prod.yaml  prefect.yaml  requirements.txt
config/: config.exs  dev.exs  runtime.exs  test.exs
docs/: environment-operations.md
frontend/: Dockerfile  mix.exs
lib/: heaters.ex  heaters_web.ex
plans/: production-deployment.md  (+2 more)
py/: __init__.py  pyproject.toml  requirements.txt  runner.py  test_format_selection.py
py/tasks/: __init__.py  detect_scenes.py  download.py  download_handler.py  download_service.py  embed.py  export_clips.py  ingest.py  intake.py  keyframe.py  media_processing.py  preprocess.py  preprocessing.py  s3_handler.py  s3_upload.py  splice.py  sprite.py  upload_s3.py
py/utils/: __init__.py  filename_utils.py  process_utils.py  s3_handler.py
(+1797 files in other folders)
